--- a/inventory/group_vars/all.yml
+++ b/inventory/group_vars/all.yml
@@ -4,21 +4,27 @@
 # eg:  "HDF-3.3"["manifests"]["3.0.1.0"]["centos-ppc7"]  ->   3.3.1.0-10 (just version, HDP/HDF should be dropped)
 release:
         ambari: 
-            url: http://s3.amazonaws.com/dev.hortonworks.com/ambari/centos7-ppc/2.x/BUILDS/2.7.3.0-139/ambaribn.repo
+            #url: http://s3.amazonaws.com/dev.hortonworks.com/ambari/centos7/2.x/BUILDS/2.6.2.27-3/ambaribn.repo
+            #url: http://public-repo-1.hortonworks.com/ambari/centos7-ppc/2.x/updates/2.6.2.2/ambari.repo
+            url: http://public-repo-1.hortonworks.com/ambari/centos7-ppc/2.x/updates/2.7.3.0/ambari.repo
+            
         hdf:
             url:  http://s3.amazonaws.com/dev.hortonworks.com/HDF/centos7-ppc/3.x/BUILDS/3.3.1.0-10/hdfbn.repo
             #mpack: http://public-repo-1.hortonworks.com/HDF/centos7/3.x/updates/3.3.1.0/tars/hdf_ambari_mp/hdf-ambari-mpack-3.3.1.0-10.tar.gz
             mpack: http://s3.amazonaws.com/dev.hortonworks.com/HDF/centos7-ppc/3.x/BUILDS/3.3.1.0-10/tars/hdf_ambari_mp/hdf-ambari-mpack-3.3.1.0-10.tar.gz
-            install: yes 
-            purge: yes 
+            install: no 
+            purge: no 
             version: 3.3.1.0-10
         hdp:
-            url:    http://s3.amazonaws.com/dev.hortonworks.com/HDP/centos-ppc7/3.x/BUILDS/3.1.0.0-78/hdpbn.repo
+            #url: http://s3.amazonaws.com/dev.hortonworks.com/HDP/centos7/2.x/BUILDS/2.6.5.1050-37/hdpbn.repo
+            #url: http://public-repo-1.hortonworks.com/HDP/centos7-ppc/2.x/updates/2.6.5.1100/hdp.repo
+            #version: HDP-2.6.5.1100-53
+            url: http://public-repo-1.hortonworks.com/HDP/centos7-ppc/3.x/updates/3.1.0.0/hdp.repo
             version: 3.1.0.0-78
             #url:  http://public-repo-1.hortonworks.com/HDP/centos7/3.x/updates/3.0.1.0/hdp.repo
             #version: 3.0.1.0-187
         hdp_gpl:
-            base_url: http://public-repo-1.hortonworks.com/HDP-GPL/centos-ppc7/3.x/updates/3.1.0.0
+            base_url: http://public-repo-1.hortonworks.com/HDP-GPL/centos-ppc7/2.x/updates/3.1.0.0
             version: HDP-3.1-GPL
         hdp_utils:
             base_url: http://public-repo-1.hortonworks.com/HDP-UTILS-1.1.0.22/repos/centos7
@@ -41,9 +47,12 @@ blueprint:
 
 # java-configurations
 # ibm-cloud  java_home:  /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.191.b12-0.el7_5.ppc64le
+#                        /usr/lib/jvm/java-1.8.0-openjdk-1.8.0.181-7.b13.el7.ppc64le
 # ycloud java_home:  /usr/lib/jvm/java-1.8.0-openjdk
+# ycloud open_jdk: /usr/java/jdk1.8.0_131
+ 
 java:
-    home:  /usr/lib/jvm/java-1.8.0-openjdk
+    home:  /usr/lib/jvm/java-openjdk
 
 
 # database configurations
@@ -80,7 +89,7 @@ database:
 # security-kerberos configurations, effective if cluster.security.kerberos = yes
 kerberos:
     enable: yes
-    realm: HDF.COM
+    realm: HDP.COM
     db_master_key: passW0rd
     admin_princ_pswd: passW0rd
 
@@ -103,47 +112,35 @@ ldap:
   olcRootCN: ldapadm
   olcSuffixTopDomain: hortonworks
   olcRootPW: passW0rd
+  users:
+    - name: sam
+    - name: tom
+    - name: sheldon
+    - name: rajesh
+    - name: sumanth
+    - name: patrik
+    - name: ahmark   
+    - name: kalyan      
+    - name: satya
+    - name: admin1  
+    - name: guest1  
   groups:
-    - name: marketing
-      id: 75000001
+    - name: analyst
       users:
-        - name: mkt1
-          id: 75000010
-        - name: mkt2
-          id: 75000011
-    - name: hr
-      id: 75000002
+        - sam  
+        - tom
+    - name: scientist
       users:
-        - name: hr1
-          id: 75000012
-        - name: hr2
-          id: 75000013      
-    - name: legal
-      id: 75000003
+        - sheldon
+        - rajesh
+        - sam        
+    - name: admin
       users:
-        - name: legal1
-          id: 75000014
-        - name: legal2
-          id: 75000015      
-    - name: finance
-      id: 75000004
+        - satya 
+        - sumanth
+        - kalyan        
+    - name: engineer
       users:
-        - name: finance1
-          id: 75000016
-        - name: finance2
-          id: 75000017         
-    - name: sales
-      id: 75000005
-      users:
-        - name: sales1
-          id: 75000018
-        - name: sales2
-          id: 75000019       
-    - name: admins
-      id: 75000006
-      users:
-        - name: rangeradmin
-          id: 75000020
-        - name: xapolicymgr
-          id: 75000021     
+        - patrik
+        - ahmark            
 ...
