--- a/roles/blueprints/tasks/main.yml
+++ b/roles/blueprints/tasks/main.yml
@@ -65,7 +65,7 @@
   tags:
   - registerVdf      
   
-- name: Register the stack version
+- name: Register the stack version - HDP
   uri:
     url: "http://{{groups['gateway'][0]}}:8080/api/v1/stacks/HDP/versions/{{release.hdp.version|regex_replace('^([0-9]\\.[0-9]).*$','\\1')}}/operating_systems/{{cluster.os}}/repositories/HDP-{{release.hdp.version|regex_replace('^([0-9]\\.[0-9]).*$','\\1')}}"
     method: PUT
@@ -77,7 +77,23 @@
     body: "{{ lookup('template','templates/repo.json.j2') | to_json }}" 
     force_basic_auth: yes
     status_code: 200,201  
-  when: release.hdf.install  and not release.hdf.purge
+  when: not release.publicrepos and not release.hdf.purge
+  tags:
+  - registgerStackVersion  
+
+- name: Register the stack version - HDF
+  uri:
+    url: "http://{{groups['gateway'][0]}}:8080/api/v1/stacks/HDF/versions/{{release.hdf.version|regex_replace('^([0-9]\\.[0-9]).*$','\\1')}}/operating_systems/{{cluster.os}}/repositories/HDF-{{release.hdf.version|regex_replace('^([0-9]\\.[0-9]).*$','\\1')}}"
+    method: PUT
+    headers:
+      X-Requested-By: ambari
+    user: admin
+    password: admin
+    body_format: raw
+    body: "{{ lookup('template','templates/repo.json.j2') | to_json }}" 
+    force_basic_auth: yes
+    status_code: 200,201  
+  when: not release.publicrepos and release.hdf.purge
   tags:
   - registgerStackVersion  
 
@@ -100,6 +116,10 @@
 
 # verify the VDF registration using GET: http://172.27.11.192:8080/api/v1/stacks/HDP/versions/3.1/repository_versions/1?fields=operating_systems/repositories/Repositories&minimal_response=true
 
+# wait for 30 sec
+- name: sleep for 30s and continue with play
+  wait_for: timeout=30
+  delegate_to: localhost
 
 - name: register the blueprint
   uri:
@@ -115,6 +135,12 @@
     status_code: 201  
   tags:
   - registerBp     
+
+# wait for 10 sec
+- name: sleep for 30s and continue with play
+  wait_for: timeout=10
+  delegate_to: localhost
+
 - name: deploy the blueprint
   uri:
     url: "http://{{groups['gateway'][0]}}:8080/api/v1/clusters/{{cluster.name}}"
