--- a/roles/blueprints/tests/test.yml
+++ b/roles/blueprints/tests/test.yml
@@ -4,5 +4,8 @@
   tasks:
   - setup:
 - hosts: gateway
-  roles:
-  - role: ../..
+  tasks:
+    - template: 
+        src: "../templates/{{ blueprint.location }}/blueprint.json.j2"
+        dest: /root/blueprint.json
+        mode: 0755
