--- a/roles/blueprints/tasks/main.yml
+++ b/roles/blueprints/tasks/main.yml
@@ -4,13 +4,15 @@
     dest: /root/blueprint.json
     mode: 0755
   tags:
-  - printOnly     
+  - printOnly 
+  - blueprint
 - template: 
     src: templates/{{blueprint.location}}/template.json.j2
     dest: /root/template.json
     mode: 0755
   tags:
-  - printOnly     
+  - printOnly 
+  - template
 - template: 
     src: "templates/{{item}}"
     dest: "/root/{{item}}.json"
